--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -23,6 +24,9 @@
     -->
     <title>React App</title>
   </head>
+  <script src = "http://www.labelwriter.com/software/dls/sdk/js/DYMO.Label.Framework.2.0.2.js" type="text/javascript" charset="UTF-8"></script>
+  <script src='%PUBLIC_URL%/qrcode.min.js'></script>
+  <script src='%PUBLIC_URL%/BrowserPrint-1.0.4.min.js'></script>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
