--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <title>Polymer Dashboard</title>
   </head>
 
-  <script src = "http://www.labelwriter.com/software/dls/sdk/js/DYMO.Label.Framework.2.0.2.js" type="text/javascript" charset="UTF-8"></script>
+  <!-- <script src = "http://www.labelwriter.com/software/dls/sdk/js/DYMO.Label.Framework.2.0.2.js" type="text/javascript" charset="UTF-8"></script> -->
+  <script src = "https://s3.amazonaws.com/polymer-scripts/DYMO/labelwriter.js" type="text/javascript" charset="UTF-8"></script>
   <script src='%PUBLIC_URL%/qrcode.min.js'></script>
   <script src='%PUBLIC_URL%/BrowserPrint-1.0.4.min.js'></script>
 
