--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,26 @@
   <script src='%PUBLIC_URL%/qrcode.min.js'></script>
   <script src='%PUBLIC_URL%/BrowserPrint-1.0.4.min.js'></script>
 
+  <script>!function(e,o,n){window.HSCW=o,window.HS=n,n.beacon=n.beacon||{};var t=n.beacon;t.userConfig={},t.readyQueue=[],t.config=function(e){this.userConfig=e},t.ready=function(e){this.readyQueue.push(e)},o.config={docs:{enabled:!1,baseUrl:""},contact:{enabled:!0,formId:"a706e59b-1d97-11e8-b466-0ec85169275a"}};var r=e.getElementsByTagName("script")[0],c=e.createElement("script");c.type="text/javascript",c.async=!0,c.src="https://djtflbt20bdde.cloudfront.net/",r.parentNode.insertBefore(c,r)}(document,window.HSCW||{},window.HS||{});</script>
+
+<script>
+  window.HS.beacon.config({
+    color: '#0079f3',
+    icon: 'message',
+    translation: {
+      searchLabel: 'En que podemos ayudarte?',
+      searchErrorLabel: 'Lo sentimos, hubo un error con tu busqueda'
+    },
+    topics: [
+      { val: 'need-help', label: 'Need help with the product' },
+      { val: 'bug', label: 'I think I found a bug'},
+      { val: 'feature-req', label: 'I thought of a new feature'}
+    ],
+    attachment: true,
+    instructions: "Send a message to us below with as many details as possible about your request. We usually respond in a couple of hours."
+  });
+</script>
+
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
