--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/favicon-16x16.png?v=eE5e6B5NQ7">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="mask-icon" href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg?v=eE5e6B5NQ7" color="#43b1ff">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/favicon.ico?v=eE5e6B5NQ7">
+    <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico?v=eE5e6B5NQ7">
     <meta name="theme-color" content="#ffffff">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
